# DeathStarBench

./: .gitignore  .gitmodules  README.md  lzaleski - Shortcut.lnk  visualize.ipynb
mediaMicroservices/: .dockerignore  CMakeLists.txt  Dockerfile  README.md  compile.sh  docker-compose-sharding.yml  docker-compose.yml  load.sh  media_service.thrift  my-logs.md  my-profile  my-profile.sh  my-tune  only-perf.sh  output.txt  run.sh
mediaMicroservices/cmake/: Findthrift.cmake
mediaMicroservices/config/: service-config.json
mediaMicroservices/datasets/tmdb/: casts-tiny.json  casts_11_20.json  casts_1_1.json  casts_1_10.json  casts_21_30.json  casts_31_40.json  casts_41_50.json  casts_join.py  get_casts.py  get_movie_titles.py  get_movies.py  movie_titles.txt  movies-tiny.json  movies_11_20.json  movies_1_10.json  movies_21_30.json  movies_31_40.json  movies_41_50.json  movies_join.py
mediaMicroservices/docker/mcrouter/: Dockerfile
mediaMicroservices/docker/openresty-thrift/: .travis.yml  README.md
mediaMicroservices/docker/wrk2-opentracing/: Dockerfile
mediaMicroservices/gen-cpp/: CastInfoService.cpp  CastInfoService.h  CastInfoService_server.skeleton.cpp  ComposeReviewService.cpp  ComposeReviewService.h  ComposeReviewService_server.skeleton.cpp  MovieIdService.cpp  MovieIdService.h  MovieIdService_server.skeleton.cpp  MovieInfoService.cpp  MovieInfoService.h  MovieInfoService_server.skeleton.cpp  MovieReviewService.cpp  MovieReviewService.h  MovieReviewService_server.skeleton.cpp  PageService.cpp  PageService.h  PageService_server.skeleton.cpp  PlotService.cpp  PlotService.h  PlotService_server.skeleton.cpp  RatingService.cpp  RatingService.h  RatingService_server.skeleton.cpp  ReviewStorageService.cpp  ReviewStorageService.h  ReviewStorageService_server.skeleton.cpp  TextService.cpp  TextService.h  TextService_server.skeleton.cpp  UniqueIdService.cpp  UniqueIdService.h  UniqueIdService_server.skeleton.cpp  UserReviewService.cpp  UserReviewService.h  UserReviewService_server.skeleton.cpp  UserService.cpp  UserService.h  UserService_server.skeleton.cpp  media_service_constants.cpp  (+3 more)
mediaMicroservices/gen-lua/: media_service_ComposeReviewService.lua  media_service_MovieIdService.lua  media_service_MovieInfoService.lua  media_service_PlotService.lua  media_service_ReviewStorageService.lua  media_service_UserService.lua
mediaMicroservices/gen-py/media_service/: CastInfoService-remote  CastInfoService.py  ComposeReviewService-remote  ComposeReviewService.py  MovieIdService-remote  MovieIdService.py  MovieInfoService-remote  MovieInfoService.py  MovieReviewService-remote  MovieReviewService.py  PageService-remote  PageService.py  PlotService-remote  PlotService.py  RatingService-remote  RatingService.py  ReviewStorageService-remote  ReviewStorageService.py  TextService-remote  TextService.py  UniqueIdService-remote  UniqueIdService.py  UserReviewService-remote  UserReviewService.py  UserService-remote  UserService.py  __init__.py  ttypes.py
mediaMicroservices/helm-chart/mediamicroservices/: Chart.yaml  values.yaml
mediaMicroservices/k8s-yaml/: README.md  cast-info-memcached.yaml  cast-info-mongodb.yaml  cast-info-service.yaml  compose-review-memcached.yaml  compose-review-service.yaml  jaeger.yaml  movie-id-memcached.yaml  movie-id-mongodb.yaml  movie-id-service.yaml  movie-info-memcached.yaml  movie-info-mongodb.yaml  movie-info-service.yaml  movie-review-mongodb.yaml  movie-review-redis.yaml  movie-review-service.yaml  nginx-web-server.yaml  plot-memcached.yaml  plot-mongodb.yaml  plot-service.yaml  rating-redis.yaml  rating-service.yaml  review-storage-memcached.yaml  review-storage-mongodb.yaml  review-storage-service.yaml  text-service.yaml  unique-id-service.yaml  user-memcached.yaml  user-mongodb.yaml  user-review-mongodb.yaml  user-review-redis.yaml  user-review-service.yaml  user-service.yaml
mediaMicroservices/memcached/: topdown.xlsx
mediaMicroservices/mongodb/: topdown.xlsx
mediaMicroservices/nginx-web-server/conf/: nginx-k8s.conf  nginx.conf
mediaMicroservices/nginx-web-server/lua-scripts/: test.lua
mediaMicroservices/openshift/: README.md  cast-info-memcached.yaml  cast-info-mongodb.yaml  cast-info-service.yaml  compose-review-memcached.yaml  compose-review-service.yaml  jaeger.yaml  media-microsvc-ns.yaml  mms-client.yaml  movie-id-memcached.yaml  movie-id-mongodb.yaml  movie-id-service.yaml  movie-info-memcached.yaml  movie-info-mongodb.yaml  movie-info-service.yaml  movie-review-mongodb.yaml  movie-review-redis.yaml  movie-review-service.yaml  nginx-web-server.yaml  plot-memcached.yaml  plot-mongodb.yaml  plot-service.yaml  rating-redis.yaml  rating-service.yaml  review-storage-memcached.yaml  review-storage-mongodb.yaml  review-storage-service.yaml  text-service.yaml  unique-id-service.yaml  user-memcached.yaml  user-mongodb.yaml  user-review-mongodb.yaml  user-review-redis.yaml  user-review-service.yaml  user-service.yaml
mediaMicroservices/redis/: topdown-old.xlsx  topdown.xlsx
mediaMicroservices/scripts/: compose_review.sh  gen_mongo_configs.py  mongodb_bootstrap.sh  register_movies.sh  register_users.sh  write_movie_info.py
mediaMicroservices/service/: topdown.xlsx
mediaMicroservices/src/: CMakeLists.txt  ClientPool.h  GenericClient.h  RedisClient.h  ThriftClient.h  logger.h  tracing.h  utils.h  utils_memcached.h  utils_mongodb.h
mediaMicroservices/test/: CMakeLists.txt  testCastInfoService.py  testClientPool.cpp  testComposeReviewService.py  testComposeReviewServiceE2E.py  testMemcachedAtomicIncrement.cpp  testMovieIdService.py  testMovieInfoService.py  testMovieReviewService.py  testPageService.py  testPlotService.py  testRatingService.py  testReviewStorageService.py  testTextService.py  testUniqueIdService.py  testUserReviewService.py  testUserService.py
mediaMicroservices/wrk2/: run.sh  wrk
socialNetwork/src/: AmqpLibeventHandler.h  CMakeLists.txt  ClientPool.h  GenericClient.h  RedisClient.h  ThriftClient.h  logger.h  tracing.h  utils.h  utils_memcached.h  utils_mongodb.h  utils_redis.h  utils_thrift.h
(+1526 files in other folders)
